examples/test/testpolicy10525.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10525
  namespace: namespace419
spec:
  podSelector:
    matchLabels:
      key10: value12
      key20: value33
      key22: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value41
          key0: value40
          key37: value20
      podSelector:
        matchLabels:
          key47: value43
          key2: value5
          key11: value11
